# minimal-Rust-Linux

./: Cargo.toml
Reference_C/: Makefile
Reference_Rust_Dynamic/: Cargo.toml
Reference_Rust_Dynamic/.cargo/: config.toml
hello1/: Cargo.toml
hello1/src/: main.rs
hello2/: Cargo.toml
hello2/src/: main.rs
