[workspace]
members = [
    "hello*",

]

exclude = [
    "Reference_Rust_Dynamic",
]


[profile.dev]
panic = "abort"

[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
